--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>Grupo Rio de Janeiro</h1>
+ <h1>TRABALHOS DE GEOGRAFIA 8ºA</h1>
  <img id="ima1" src="sobrecargaterra2-1400x0-c-default.jpg">
  <ul>
     <li>Lorran</li>
